--- a/public/index.html
+++ b/public/index.html
@@ -34,7 +34,7 @@
       href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap"
       rel="stylesheet"
     />
-    <title>Personal homepage</title>
+    <title>Sofya Grek - Frontend Developer (React)</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
